fix: components >  text color issue in dark mode

--- a/assets/main.css
+++ b/assets/main.css
@@ -1980,6 +1980,7 @@
   border: none;
   border-radius: var(--radius-lg-inc) var(--radius-lg-inc) 0 0;
   background-color: var(--color-background);
+  color: var(--color-on-background);
 }
 [ui-slot=drawer] [ui-slot=drawer-content][popover]::before {
   content: "";
@@ -2297,9 +2298,6 @@
   display: flex;
   position: fixed;
   z-index: 50;
-  inset: unset;
-  inset-block-start: var(--spacing-0);
-  inset-inline-end: calc(var(--sheet-width) * -1);
   flex-direction: column;
   justify-content: space-between;
   width: var(--sheet-width);
@@ -2307,6 +2305,10 @@
   transition: var(--transition-expressive-default-spatial);
   border: none;
   background-color: var(--color-background);
+  color: var(--color-on-background);
+  inset: unset;
+  inset-block-start: var(--spacing-0);
+  inset-inline-end: calc(var(--sheet-width) * -1);
   /* Header */
 }
 [ui-slot=sheet] [ui-slot=sheet-content] [ui-slot=sheet-header] {
@@ -2518,6 +2520,7 @@
   border-radius: var(--radius-lg-inc);
   opacity: 0;
   background-color: var(--color-background);
+  color: var(--color-on-background);
   inset-block-start: 50%;
   filter: blur(2px);
   /* Header */
@@ -3677,7 +3680,7 @@ input[type=range]:active::-webkit-slider-thumb {
   min-height: 82px;
   padding: var(--spacing-10) var(--spacing-12);
   transition: all var(--transition-standard-default-spatial);
-  border: 1px solid var(--color-outline-variant);
+  border: 1px solid var(--color-surface-variant);
   border-radius: var(--radius-sm);
   outline: 2px solid transparent;
   outline-offset: 1px;
@@ -3720,6 +3723,18 @@ input[type=range]:active::-webkit-slider-thumb {
 [ui-slot=textarea]:focus[aria-invalid=true] {
   border-color: var(--color-error);
   outline-color: color-mix(in oklab, var(--color-error) 15%, transparent);
+}
+[ui-slot=textarea] {
+  /* Hover */
+}
+[ui-slot=textarea]:hover:not(:focus, :disabled) {
+  background-color: var(--color-surface-container-low);
+}
+[ui-slot=textarea]:hover:not(:focus, :disabled):not([aria-invalid=true]) {
+  border-color: transparent;
+}
+[ui-slot=textarea]:hover:not(:focus, :disabled)::placeholder {
+  color: var(--color-on-surface-variant);
 }
 
 /* LAYOUT */
