--- a/styles/components/disclosure/sheet.scss
+++ b/styles/components/disclosure/sheet.scss
@@ -13,9 +13,6 @@
     display: flex;
     position: fixed;
     z-index: 50;
-    inset: unset;
-    inset-block-start: var(--spacing-0);
-    inset-inline-end: calc(var(--sheet-width) * -1);
     flex-direction: column;
     justify-content: space-between;
     width: var(--sheet-width);
@@ -23,6 +20,10 @@
     transition: var(--transition-expressive-default-spatial);
     border: none;
     background-color: var(--color-background);
+    color: var(--color-on-background);
+    inset: unset;
+    inset-block-start: var(--spacing-0);
+    inset-inline-end: calc(var(--sheet-width) * -1);
 
     /* Header */
     [ui-slot="sheet-header"] {
