--- a/styles/components/feedback/modal.scss
+++ b/styles/components/feedback/modal.scss
@@ -26,6 +26,7 @@
     border-radius: var(--radius-lg-inc);
     opacity: 0;
     background-color: var(--color-background);
+    color: var(--color-on-background);
     inset-block-start: 50%;
     filter: blur(2px);
 
