--- a/styles/components/form/textarea.scss
+++ b/styles/components/form/textarea.scss
@@ -9,7 +9,7 @@
   min-height: 82px;
   padding: var(--spacing-10) var(--spacing-12);
   transition: all var(--transition-standard-default-spatial);
-  border: 1px solid var(--color-outline-variant);
+  border: 1px solid var(--color-surface-variant);
   border-radius: var(--radius-sm);
   outline: 2px solid transparent;
   outline-offset: 1px;
@@ -50,6 +50,19 @@
     &[aria-invalid="true"] {
       border-color: var(--color-error);
       outline-color: color-mix(in oklab, var(--color-error) 15%, transparent);
+    }
+  }
+
+  /* Hover */
+  &:hover:not(:focus, :disabled) {
+    background-color: var(--color-surface-container-low);
+
+    &:not([aria-invalid="true"]) {
+      border-color: transparent;
+    }
+
+    &::placeholder {
+      color: var(--color-on-surface-variant);
     }
   }
 }
